apps/arr/tdarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
spec:
  ingressClassName: traefik
  rules:
    - host: tdarr.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr-service
                port:
                  name: tdarr-web
  tls:
    - secretName: local-tls
      hosts:
        - tdarr.local.boomerok.dev
